fix: make locations view visible

--- a/static/css/parts/ViewletReferences.css
+++ b/static/css/parts/ViewletReferences.css
@@ -1,5 +1,6 @@
 .Locations {
   display: flex;
+  flex: 1;
   flex-direction: column;
 }
 
